[package]
name = "lib-sters"
version = "0.1.0"
authors = ["Pratik Gorade <pratikgorade0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new = "0.5"
minreq = { version = "2.3.1", features = ["json-using-serde", "https"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.24"
