[package]
name = "lib-sters"
version = "0.1.0"
authors = ["Pratik Gorade <pratikgorade0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.24"
ureq = { version = "2.1.0", features = [ "json" ] }
