[package]
name = "lobs-tui"
version = "0.1.0"
authors = ["Pratik Gorade <pratikgorade0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19"
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
lib-sters = { path = "../lib-sters" }